Regression: Crash when Sculpting on a mesh from a GP Lineart Modifier #110038

Closed
opened 2023-07-13 02:11:51 +02:00 by Andres Stephens · 18 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits (W11)
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68

Blender Version
Broken: version: 3.2, 4.0.0 Alpha, branch: main, commit date: 2023-07-11 20:50, hash: c728fa0663b6
Worked: 3.1

Short description of error
When trying to sculpt a in an assigned collection that a grease pencil lineart modifier references and the layer it is drawing to contains Grease Pencil strokes - it will instantly crash Blender.

Exact steps for others to reproduce the error

  1. Download and extract zip to get the test blend file
  2. Load attached file with Load UI off
  3. Select the bust, it is in a GP lineart modifier collection
  4. Go to sculpt mode
  5. Try sculpt
  6. Crash

Alternative steps:

  1. Create new scene
  2. Create a sphere
  3. Create a Grease Pencil object
  4. Add sphere to a new collection
  5. Select the GP object and add a lineart modifier
  6. Reference the sphere collection in the modifier
  7. Assign layer and material to the modifier
  8. Draw in the same layer in Draw mode of the GP
  9. switch to sculpt mode of GP object
  10. Try sculpt GP object
  11. Instant crash
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits (W11) Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68 **Blender Version** Broken: version: 3.2, 4.0.0 Alpha, branch: main, commit date: 2023-07-11 20:50, hash: `c728fa0663b6` Worked: 3.1 **Short description of error** When trying to sculpt a in an assigned collection that a grease pencil lineart modifier references and the layer it is drawing to contains Grease Pencil strokes - it will instantly crash Blender. **Exact steps for others to reproduce the error** 1. Download and extract zip to get the test blend file 2. Load attached file with Load UI off 3. Select the bust, it is in a GP lineart modifier collection 4. Go to sculpt mode 5. Try sculpt 6. Crash Alternative steps: 1. Create new scene 2. Create a sphere 3. Create a Grease Pencil object 4. Add sphere to a new collection 5. Select the GP object and add a lineart modifier 6. Reference the sphere collection in the modifier 7. Assign layer and material to the modifier 8. Draw in the same layer in Draw mode of the GP 9. switch to sculpt mode of GP object 10. Try sculpt GP object 11. Instant crash
Andres Stephens added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-13 02:11:52 +02:00
Member

Hi, thanks for the report. I can confirm the crash and assert hit in debug build (MEM_lockfree_mallocN_aligned at assert(alignment < 1024);)
This is a regression introduced between 3.1 - 3.2 release.
I'll raise the priority since it is easy to trigger the crash from default file.

Hi, thanks for the report. I can confirm the crash and assert hit in debug build (`MEM_lockfree_mallocN_aligned` at `assert(alignment < 1024);`) This is a regression introduced between 3.1 - 3.2 release. I'll raise the priority since it is easy to trigger the crash from default file.
Member

@ChengduLittleA , maybe you're interested to investigate this?

@ChengduLittleA , maybe you're interested to investigate this?
Pratik Borhade changed title from 3D View - Grease Pencil - Sculpt on a mesh from a GP Lineart Modifier collection on used draw layer hard crashes to Regression: Crash when Sculpting on a mesh from a GP Lineart Modifier 2023-07-13 07:40:13 +02:00
Member

Will take a look. Thanks for notifying.

Will take a look. Thanks for notifying.
YimingWu self-assigned this 2023-07-17 15:48:16 +02:00
Member

I am actually unable to reproduce the issue with the provided file or from the steps using default file... I'm on linux right now. Will try windows, maybe the memory scheduling is different.

I am actually unable to reproduce the issue with the provided file or from the steps using default file... I'm on linux right now. Will try windows, maybe the memory scheduling is different.

Any updates here? This is a high priority report and should be handled as such please.

Any updates here? This is a high priority report and should be handled as such please.
Member

Not a recent regression so we can lower the priority I guess. I'll find responsible commit afterwards.

Not a recent regression so we can lower the priority I guess. I'll find responsible commit afterwards.
Member

Nope not really reproducible here.

If it's memory related maybe it's due to the memory poll line art used, but internally it will ask for 1MB per chunk so the memory should still align, not really sure what's going on.

Nope not really reproducible here. If it's memory related maybe it's due to the memory poll line art used, but internally it will ask for 1MB per chunk so the memory should still align, not really sure what's going on.
Member

@ChengduLittleA , can you verify in uploaded file? :)

If it's memory related maybe it's due to the memory poll line art used, but internally it will ask for 1MB per chunk so the memory should still align,

Seems so.

Broke between 2887df119c - d3b1cce400 , checking further

Call Stack

Stack trace:
blender.exe :0x00007FF7BDBB21E0 MEM_guarded_dupallocN C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:271
blender.exe :0x00007FF7BDD2A900 BKE_gpencil_frame_duplicate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:890
blender.exe :0x00007FF7BDD298D0 gpencil_update_on_write_frame_cb C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:2943
blender.exe :0x00007FF7BDEC2C60 gpencil_traverse_update_cache_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_update_cache_legacy.cc:216
blender.exe :0x00007FF7BDEC2C60 gpencil_traverse_update_cache_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_update_cache_legacy.cc:210
blender.exe :0x00007FF7BDD2E2F0 BKE_gpencil_update_on_write C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:3036
blender.exe :0x00007FF7BE0E7660 blender::deg::deg_update_copy_on_write_datablock C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:889
blender.exe :0x00007FF7BE0E7150 blender::deg::deg_evaluate_copy_on_write C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:1032
blender.exe :0x00007FF7BE0F7360 blender::deg::anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:109 blender.exe :0x00007FF7BE0F7190 blender::deg::anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:122
blender.exe :0x00007FF7BEE548C0 BLI_task_pool_work_and_wait C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:472
blender.exe :0x00007FF7BE0F7200 blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:325
blender.exe :0x00007FF7BE0F6E90 blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:429
blender.exe :0x00007FF7BDCAFD30 scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2566
blender.exe :0x00007FF7BDBCC780 wm_event_do_notifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:716
blender.exe :0x00007FF7BDBB45D0 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.cc:615
blender.exe :0x00007FF7BDB953C0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.cc:594
blender.exe :0x00007FF7BEE24684 __scrt_common_main_seh D:\a_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL :0x00007FF9BDD65590 BaseThreadInitThunk
ntdll.dll :0x00007FF9BED84830 RtlUserThreadStart

@ChengduLittleA , can you verify in uploaded file? :) > If it's memory related maybe it's due to the memory poll line art used, but internally it will ask for 1MB per chunk so the memory should still align, Seems so. Broke between 2887df119c3b - d3b1cce4000b , checking further <details> <summary> Call Stack </summary> Stack trace: blender.exe :0x00007FF7BDBB21E0 MEM_guarded_dupallocN C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\intern\guardedalloc\intern\mallocn_guarded_impl.c:271 blender.exe :0x00007FF7BDD2A900 BKE_gpencil_frame_duplicate C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:890 blender.exe :0x00007FF7BDD298D0 gpencil_update_on_write_frame_cb C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:2943 blender.exe :0x00007FF7BDEC2C60 gpencil_traverse_update_cache_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_update_cache_legacy.cc:216 blender.exe :0x00007FF7BDEC2C60 gpencil_traverse_update_cache_ex C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_update_cache_legacy.cc:210 blender.exe :0x00007FF7BDD2E2F0 BKE_gpencil_update_on_write C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\gpencil_legacy.cc:3036 blender.exe :0x00007FF7BE0E7660 blender::deg::deg_update_copy_on_write_datablock C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:889 blender.exe :0x00007FF7BE0E7150 blender::deg::deg_evaluate_copy_on_write C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:1032 blender.exe :0x00007FF7BE0F7360 blender::deg::`anonymous namespace'::evaluate_node C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:109 blender.exe :0x00007FF7BE0F7190 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:122 blender.exe :0x00007FF7BEE548C0 BLI_task_pool_work_and_wait C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:472 blender.exe :0x00007FF7BE0F7200 blender::deg::`anonymous namespace'::evaluate_graph_threaded_stage C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:325 blender.exe :0x00007FF7BE0F6E90 blender::deg::deg_evaluate_on_refresh C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:429 blender.exe :0x00007FF7BDCAFD30 scene_graph_update_tagged C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2566 blender.exe :0x00007FF7BDBCC780 wm_event_do_notifiers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:716 blender.exe :0x00007FF7BDBB45D0 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.cc:615 blender.exe :0x00007FF7BDB953C0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.cc:594 blender.exe :0x00007FF7BEE24684 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF9BDD65590 BaseThreadInitThunk ntdll.dll :0x00007FF9BED84830 RtlUserThreadStart </details>
Member
Caused by e2befa425a84c9e4ec715442e85624a5d3669a4f @filedescriptor ^
Falk David added this to the Grease Pencil project 2023-10-12 15:17:10 +02:00
Brecht Van Lommel added this to the 4.0 milestone 2023-10-31 13:56:03 +01:00

Ping, this is still marked as a high priority report. Either the priority should be lowered, or this should take precedence over other development.

Ping, this is still marked as a high priority report. Either the priority should be lowered, or this should take precedence over other development.
Member

I can't reproduce this crash in the 4.0 beta.

I can't reproduce this crash in the 4.0 beta.
Member

@filedescriptor , I assume you're on linux? (like Yiming)
I can still redo the crash in current main

@filedescriptor , I assume you're on linux? (like Yiming) I can still redo the crash in current main
Member

Also tried the individual steps, but can't get it to crash either.

Also tried the individual steps, but can't get it to crash either.
Member

Right I'm on linux

Right I'm on linux
Member

@PratikPB2123 I built a debug build on windows for the current 4.0 beta and I can't get it to crash.
@AndresStephens Can you confirm this is still crashing for the 4.0 beta?

@PratikPB2123 I built a debug build on windows for the current 4.0 beta and I can't get it to crash. @AndresStephens Can you confirm this is still crashing for the 4.0 beta?
Author
Contributor

Sure. I fly home Friday tomorrow after the BCON trip and will be able to test Monday.

Sure. I fly home Friday tomorrow after the BCON trip and will be able to test Monday.
Member

@filedescriptor , did you check file 110038.blend from #110038 (comment) ?

@filedescriptor , did you check file [110038.blend](https://projects.blender.org/attachments/beda829c-7ea3-4c17-af16-570c03392387) from https://projects.blender.org/blender/blender/issues/110038#issuecomment-1038542 ?
Member

I can reproduce this now. Importantly, I needed to sculpt on the grease pencil object not the mesh (like the report says).

I can reproduce this now. Importantly, I needed to sculpt on the grease pencil object *not* the mesh (like the report says).
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-02 17:09:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110038
No description provided.